# rkg-inspector

./: Cargo.toml  README.md  build.rs
images/countryflags/: country.py
images/vehicles/: vehicles.py
src/: app.rs  files.rs  helpers.rs  main.rs  message.rs  mii_rendering.rs
src/ui/: assets.rs  constants.rs  fit_text.rs  footer_tab.rs  image_handles.rs  mod.rs  styles.rs  widgets.rs
