[package]
name = "rkg-inspector"
version = "0.1.0"
edition = "2024"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
iced = { version = "0.14.0", features = ["image", "svg", "advanced"] }
reqwest = { version = "0.13.2", features = ["json"] }
rfd = "0.17.2"
rkg-utils = "0.3.5"
tokio = { version = "1.50.0", features = ["full"] }
